jlamontSC-test/src/objects/Recruitment_Response__c.object
<CustomObject>
    <fields>
        <fullName>Recruitee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact who was recruited</description>
        <label>Recruitee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recruitment Responses (Recruitee)</relationshipLabel>
        <relationshipName>Recruitment_Responses_Recruitee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact who did the recruiting</description>
        <label>Recruiter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recruitment Responses</relationshipLabel>
        <relationshipName>Recruitment_Responses_Recruiter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recruitment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruitment</label>
        <referenceTo>kweos__EOCS_Data__c</referenceTo>
        <relationshipLabel>Recruitment Responses</relationshipLabel>
        <relationshipName>Recruitment_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <label>Recruitment Response</label>
    <nameField>
        <displayFormat>RR-{0}</displayFormat>
        <label>Recruitment Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recruitment Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>